--- a/client/package.json
+++ b/client/package.json
@@ -11,6 +11,8 @@
   },
   "dependencies": {
     "axios": "^1.6.2",
+    "cloudinary": "^1.41.0",
+    "cloudinary-react": "^1.8.1",
     "dotenv": "^16.3.1",
     "flowbite": "^2.2.1",
     "flowbite-react": "^0.7.2",
